# creator-onboarding-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  PORTFOLIO_TECHNICAL_REPORT.md  README.md  coverage.xml  docker-compose.yml  main.py  mcp.json  mypy.ini  package-lock.json  prompts.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect.md  code-reviewer.md  data-analyst.md  debugger.md  doc-updater.md  project-orchestrator.md  test-runner.md
.claude/commands/: abtest-agent.md  auto-dev.md  docs-agent.md  mcp-optimizer.md  monitor-agent.md  multi-session.md  perf-agent.md  rag-tuner.md  ralph-wiggum.md  security-agent.md  test-agent.md
.claude/hooks/: format-python.sh  format_after_edit.sh  notify_slack.sh  security-check.sh  validate-json.sh
.claude/scripts/: auto-dev-orchestrator.sh  auto-verify.sh  claude-squad-setup.sh  multi-session.sh  ralph-wiggum.sh
.claude/skills/slack-notifications/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/team/: agents.md  api.md  frontend.md  mcp.md  monitor.md  orchestrator.md  qa.md  rag.md
.github/workflows/: ci.yml  claude-code.yml
config/: settings.py
docs/: agents_api_rag_code_review.md  creator_onboarding_cases.md  creator_onboarding_rules.md  dev_todos.md  gpt5_migration_code_review.md  mission_domain_spec.md  overview_claude.md  reward_settlement_flow.md  services_monitoring_tests_code_review.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  theme.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AgentModelStatusPanel.tsx  AnalyticsPanel.tsx  AppHeader.tsx  CreatorEvaluationPanel.tsx  EvaluationResultCard.tsx  MissionRecommendationPanel.tsx  ShadcnSlider.tsx  StatusBadge.tsx
frontend/src/data/: sampleMissions.ts
frontend/src/hooks/: useHealthCheck.ts
frontend/src/i18n/: config.ts
node/: Dockerfile  README.md  env.example  package-lock.json  package.json  tsconfig.json
node/src/: server.ts
node/src/agents/: enterpriseBriefingAgent.ts  llmManagerAgent.ts
node/src/config/: index.ts
node/src/data/: knowledge_packs.ts
node/src/graphs/: mainOrchestrator.ts
node/src/scripts/: prefetchNews.ts
node/src/services/: newsService.ts  pythonApiClient.ts
node/src/types/: agentContracts.ts  creatorContracts.ts  shims-express.d.ts
scripts/: add_sample_documents.py  check_openai_models.py  export_openapi.py  init.sql  performance_test.py  rag_eval.py  setup_langfuse.py  setup_uv_environment.py  test_api_connectivity.py  test_gemini_direct.py  test_prompt_loading.py  test_prompt_loading_simple.py  test_sqlite_persistence.py  test_workflow.py  verify_config.py  verify_setup.py
src/agents/: __init__.py  base.py  llm_manager_agent.py  orchestrator.py
src/agents/analytics_agent/: __init__.py
src/agents/competency_agent/: __init__.py
src/agents/creator_onboarding_agent/: __init__.py
src/agents/data_collection_agent/: __init__.py  persistence.py
src/agents/deep_agents/: __init__.py
src/agents/integration_agent/: __init__.py
src/agents/mission_agent/: __init__.py
src/agents/recommendation_agent/: __init__.py
src/agents/search_agent/: __init__.py
src/api/middleware/: audit.py  auth.py  correlation.py  error_handler.py  rate_limit.py  security_utils.py
src/api/routes/: ab_testing_routes.py  audit_routes.py  auth_routes.py  creator_history_routes.py  mcp_routes.py
src/api/schemas/: request_schemas.py  response_schemas.py
src/api/v1/routes/: llm.py  (+12 more)
src/app/: __init__.py  dependencies.py  lifespan.py  main.py
src/config/: __init__.py  constants.py  settings.py
src/core/: __init__.py  base.py  circuit_breaker.py  exceptions.py
src/core/patterns/: __init__.py  circuit_breaker.py
src/core/utils/: agent_config.py  prompt_loader.py
src/data/: __init__.py
src/data/models/: __init__.py  audit_models.py  competency_models.py  data_models.py  mission_models.py  user_models.py
src/domain/: __init__.py
src/domain/common/: __init__.py  models.py  schemas.py
src/domain/competency/: __init__.py  models.py
src/domain/creator/: __init__.py  models.py
src/domain/mission/: __init__.py  models.py
src/graphs/: main_orchestrator.py
src/mcp/: __init__.py  mcp.py  youtube_analyzer.py
src/mcp/servers/: __init__.py  base_server.py  http_fetch_server.py  vector_search_server.py
src/monitoring/: __init__.py  langfuse.py  logging_setup.py  metrics_collector.py  performance_monitor.py  prometheus_exporter.py  tracing.py
src/rag/: __init__.py  batch_processor.py  context_builder.py  document_processor.py  generation_engine.py  intent_analyzer.py  llm_manager.py  prompt_optimizer.py  prompt_templates.py  query_expander.py  rag_pipeline.py  response_refiner.py  retrieval_engine.py  semantic_cache.py
src/services/: __init__.py  ab_testing_service.py  audit_service.py  auth_service.py  creator_history_service.py  mcp_integration.py  supadata_mcp.py
src/tasks/: __init__.py  analytics_tasks.py  celery_app.py  data_collection_tasks.py  notification_tasks.py
src/tools/: competency_tools.py  llm_tools.py  vector_search_tools.py  vector_store_utils.py
src/utils/: __init__.py  agent_config.py  hello.py  prompt_loader.py
tests/: __init__.py  conftest.py
tests/e2e/: test_creator_mission_flow.py
tests/integration/: test_correlation_id.py  test_mission_api.py  test_rate_limit.py  test_system_api.py
tests/unit/: test_schemas.py  test_settings.py
(+50 files in other folders)
